# crawl4ai-demo

./: pyproject.toml
crawl4ai_demo/: DataExtractor.py  Indexer.py  app.py
